Fixed bug #12024: Remove cellspacing (thanks to Steffen Gebert)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/linkvalidator/trunk@41917 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/typo3/sysext/linkvalidator/res/linkvalidator.css
+++ b/typo3/sysext/linkvalidator/res/linkvalidator.css
@@ -61,3 +61,12 @@
 	padding-right: 6px;
 	text-align: center;
 }
+
+#linkvalidator_statsTable td,
+#linkvalidator_brokenLinksTable td {
+	border-left: 1px solid white;
+} 
+#linkvalidator_statsTable td:first-child,
+#linkvalidator_brokenLinksTable td:first-child {
+	border-left: none;
+}
